--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1> Matplotlib Projects - Challenge </h1>
         
-        <img src = "C:\Users\domin\OneDrive\Documents\Desktop\MONU-VIRT-DATA-PT-10-2022-U-LOLC\01-Lessons\11-Web\2\Activities\03-Stu_GithubPagesProject\Unsolved\img.png" 
+        <img src = img.png" 
         width="500" height="300">
         <figcaption> This is an example figure from Matplotlib Challenge </figcaption> 
         <br>
