--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1> Matplotlib Projects - Challenge </h1>
         
-        <img src = img.png" 
+        <img src = "img.png" 
         width="500" height="300">
         <figcaption> This is an example figure from Matplotlib Challenge </figcaption> 
         <br>
